# gca

./: .gitignore  README.md  package-lock.json  package.json  verify_frontend.js
.github/workflows/: build.yml
assets/: icon.icns
src/: main.js  preload.js  properties.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-create-sd.json  allow-gca-commands.json  gca.json  get-props.json  list-sd.json  open-url.json
src-tauri/src/: commands.rs  main.rs
src/renderer/: index.html  script.js  style.css  tauri-bridge.js
