[package]
name = "gca"
version = "2.0.0"
description = "Générateur de cartes SD pour les enceintes AudioContes Disney"
authors = ["Zarhkoh"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
tempfile = "3.10"
open = "5.1"
zip-extract = "0.1"
fs_extra = "1.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
