[package]
name = "gca"
version = "2.0.0"
description = "Generateur de cartes SD pour les enceintes AudioContes Disney"
authors = ["Zarhkoh"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip-extract = "0.1"
fs_extra = "1.3"
tempfile = "3.10"
sysinfo = "0.30"
webbrowser = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
